# Atlas-MapGenerator

./: .gitignore  README.md  imgui.ini  linux_cross.txt  meson.build  mingw_cross.txt  test
data/shaders/: circle.frag
data/world templates/default4/: map_generator.json
data/world templates/default_4/: map_generator.json  objects.json  resourcepacks.json
release/shaders/: sprite.frag  sprite.vert
release/world templates/default_4/: biomes.json
src/: atlas_utils.h  freeCamera.h  gui.cpp  gui.h  main.cpp  map_generator.cpp  map_generator.h  map_generator_gui.cpp  map_generator_gui.h  map_generator_scene.cpp  map_generator_scene.h  map_viewer.cpp  map_viewer.h  meson.build  world_creator.h  world_template_creator.cpp  world_template_creator.h
subprojects/: core.wrap  fastnoiselite.wrap  fmt.wrap  gleq.wrap  glew.wrap  glfw3.wrap  glm.wrap  imgui.wrap  magic_enum.wrap  nlohmann_json.wrap  stb.wrap
subprojects/packagefiles/fastnoiselite_patch/: meson.build
subprojects/packagefiles/fastnoiselite_patch/Cpp/: meson.build
